samples/_failures_safe/1761507696_69b01b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c53e6bd.c: In function ‘main’:
./samples/SAFE/__tmp_0c53e6bd.c:197:17: error: expected expression at end of input
  197 |                 while (getchar() !=
      |                 ^~~~~
./samples/SAFE/__tmp_0c53e6bd.c:197:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c53e6bd.c:197:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c53e6bd.c:197:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c53e6bd.c:197:17: error: expected declaration or statement at end of input
